--- a/www/templates/maps.html
+++ b/www/templates/maps.html
@@ -1,4 +1,7 @@
  <ion-view title="Maps">
+    <ion-nav-buttons side="left">
+       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-header-bar class="bar-dark" >
       <h1 class="title">Map</h1>
     </ion-header-bar>
